# zubridge

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  version.config.json
.github/workflows/: _release-calculate.reusable.yml  _release-orchestration.reusable.yml  _release-post.reusable.yml  _release-prepare.reusable.yml  _release-publish.reusable.yml  ci.yml  pre-release.yml  release.yml
.github/workflows/actions/build-verify/: action.yml
.github/workflows/actions/setup-workspace/: action.yml
.github/workflows/scripts/: calculate-version.ts  package-utils.sh  verify-published.sh
apps/electron-example/: CHANGELOG.md  README.md  electron-builder.config.ts  electron-builder.json  electron.vite.config.ts  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
apps/electron-example/src/main/: bridge.ts  index.ts  store.ts  window.ts
apps/electron-example/src/preload/: index.ts
apps/electron-example/src/renderer/: App.main.tsx  App.runtime.tsx  App.secondary.tsx  electron-api.ts  index.html  main.tsx  renderer.d.ts  runtime.tsx  runtimeWindow.ts  types.d.ts  types.ts
apps/electron-example/src/types/: index.ts
apps/electron-example/src/utils/: mode.ts  path.ts
apps/electron-minimal/: README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.web.json
apps/electron-minimal/src/main/: create-view.ts  index.ts  initialize-views.ts  initialize-window.ts  store.ts
apps/electron-minimal/src/preload/: index.ts
apps/electron-minimal/src/types/: index.ts
apps/electron/example-basic/: README.md  electron-builder.json  package.json
apps/electron/example-combined/: README.md  electron-builder.json  electron.vite.config.ts  package.json
apps/electron/example-handlers/: README.md  electron-builder.json  electron.vite.config.ts  package.json
apps/electron/example-reducers/: README.md  electron-builder.json  electron.vite.config.ts  package.json
apps/electron/example-separate-handlers/: CHANGELOG.md  README.md  electron-builder.json  electron.vite.config.ts  package.json
apps/electron/example-store-handlers/: CHANGELOG.md  README.md  electron-builder.json  electron.vite.config.ts  package.json
apps/tauri/: .gitignore
apps/tauri-example/: README.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/tauri-example/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/tauri-example/src-tauri/capabilities/: main.json
apps/tauri-example/src-tauri/src/: lib.rs  main.rs  tray.rs
apps/tauri-example/src/renderer/: App.main.tsx  App.runtime.tsx  index.html  main.tsx
apps/tauri-example/src/types/: index.ts
apps/tauri-v1/: .gitignore
apps/tauri-v1-example/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/tauri-v1-example/src/: index.css  types.ts
apps/tauri-v1-example/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-v1-example/src-tauri/src/: lib.rs  tray.rs
apps/tauri-v1-example/src/renderer/: App.main.tsx  App.runtime.tsx  App.secondary.tsx  index.html  main.tsx  store.ts  types.ts
apps/tauri-v1-example/src/types/: state.ts
apps/tauri-v1/example-basic/: README.md  package.json
apps/tauri-v1/example-basic/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-v1/example-handlers/: CHANGELOG.md  package.json
apps/tauri-v1/example-handlers/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-v1/example-reducers/: CHANGELOG.md  README.md  package.json
apps/tauri-v1/example-reducers/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-v1/example-separate-handlers/: CHANGELOG.md  README.md  package.json
apps/tauri-v1/example-separate-handlers/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-v1/example-separate-handlers/src-tauri/src/: main.rs
apps/tauri-v1/example-store-handlers/: README.md  package.json  vite.config.ts
apps/tauri-v1/example-store-handlers/src-tauri/: Cargo.toml
apps/tauri/example-basic/: README.md  package.json  vite.config.ts
apps/tauri/example-basic/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/example-handlers/: README.md  package.json
apps/tauri/example-handlers/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/example-reducers/: CHANGELOG.md  README.md  package.json
apps/tauri/example-reducers/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/example-separate-handlers/: CHANGELOG.md  README.md  package.json
apps/tauri/example-separate-handlers/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/example-separate-handlers/src-tauri/capabilities/: main.json
apps/tauri/example-store-handlers/: CHANGELOG.md  package.json
docs/: getting-started.md
e2e/: CHANGELOG.md  package.json  wdio.conf.ts
e2e/test/: interaction.spec.ts
scripts/: publish.ts  start-example-app.ts
(+168 files in other folders)
