[package]
name = "example-separate-handlers"
version = "0.1.0"
description = "Example Tauri app using zubridge-tauri"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zubridge-tauri = { path = "../../../../packages/zubridge-tauri" }

[features]
custom-protocol = ["tauri/custom-protocol"]
