[package]
name = "zubridge-tauri-v1-example-separate-handlers"
version = "0.1.0"
description = "Example Tauri app using @zubridge/tauri-v1 with action handlers located in a separate file from the Zustand store"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zubridge-tauri-v1 = { path = "../node_modules/@zubridge/tauri-v1" }

[features]
custom-protocol = ["tauri/custom-protocol"]
