[package]
name = "zubridge-tauri-example-separate-handlers"
version = "0.1.0"
description = "Example Tauri app using zubridge-tauri with separate handlers"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [
    "tray-icon",
] }
zubridge-tauri = { path = "../../../../packages/zubridge-tauri" }

[features]
custom-protocol = ["tauri/custom-protocol"]
